--- a/app/views/mypage/cards/index.html.haml
+++ b/app/views/mypage/cards/index.html.haml
@@ -20,7 +20,7 @@
                   %br
                   有効期限　：03/21
                 %td
-                  = link_to "削除する", new_mypage_card_path, class: 'btn-smole'
+                  = link_to "削除する", new_mypage_card_path, class: 'btn-small'
               %tr
                 %td
                   = f.radio_button :"", class: ''
@@ -31,7 +31,7 @@
                   %br
                   有効期限　：01/22
                 %td
-                  = link_to "削除する", "#", class: 'btn-smole'
+                  = link_to "削除する", "#", class: 'btn-small'
 
       .BodyCard--btn
         = link_to "クレジットカードを追加する", new_mypage_card_path, class: 'Button'
