--- a/app/views/mypage/cards/new.html.haml
+++ b/app/views/mypage/cards/new.html.haml
@@ -7,13 +7,13 @@
       %hr
     .BodyCard
       .BodyCard__inner
-        = form_with model: @card, url: mypage_cards_path, local: true do |f|
+        = form_tag(mypage_cards_path, method: :post, id: 'charge-form',  name: "inputForm") do
           .CardBox
             .CardBox--ele
-              = f.label :カード番号, class: 'label'
+              %label.label カード番号
               %span 必須
-            .CardBox--ele
-              = f.text_field :payment_card_no, type: 'text', class: 'input-text',id: "payment_card_no", placeholder: '半角数字のみ', maxlength: "16"
+            .CardBox--ele.number
+              = text_field_tag 'payment_card_no', "", class: 'input-text', id: "payment_card_no", placeholder: '半角数字のみ', type: "text", maxlength: "16"
             .CardBox--ele
               = image_tag ('cards/visa.svg'), class: 'card_image'
               = image_tag ('cards/master-card.svg'), class: 'card_image'
@@ -25,19 +25,42 @@
 
           .CardBox
             .CardBox--ele
-              = f.label :有効期限, class: 'label'
+              %label.label 有効期限
               %span 必須
             .CardBox--ele
-              = f.select :payment_card_month, [["01",1],["02",2],["03",3],["04",4],["05",5],["06",6],["07",7],["08",8],["09",9],["10",10],["11",11],["12",12]],{} , class: 'input-select', id: 'payment_card_month'
+              %select#payment_card_month.input-select{name: "payment_card_month", type: "text"}
+                %option{value: "1"} 01
+                %option{value: "2"} 02
+                %option{value: "3"} 03
+                %option{value: "4"} 04
+                %option{value: "5"} 05
+                %option{value: "6"} 06
+                %option{value: "7"} 07
+                %option{value: "8"} 08
+                %option{value: "9"} 09
+                %option{value: "10"} 10
+                %option{value: "11"} 11
+                %option{value: "12"} 12
               月
-              = f.select :payment_card_year, [["19",2019],["20",2020],["21",2021],["22",2022],["23",2023],["24",2024],["25",2025],["26",2026],["27",2027],["28",2028],["29",2029]],{} , class: 'input-select', id: 'payment_card_year'
+              %select#payment_card_year.input-select{name: "payment_card_year", type: "text"}
+                %option{value: "2020"} 20
+                %option{value: "2021"} 21
+                %option{value: "2022"} 22
+                %option{value: "2023"} 23
+                %option{value: "2024"} 24
+                %option{value: "2025"} 25
+                %option{value: "2026"} 26
+                %option{value: "2027"} 27
+                %option{value: "2028"} 28
+                %option{value: "2029"} 29
+                %option{value: "2030"} 30
               年
           .CardBox
             .CardBox--ele
-              = f.label :セキュリティコード, class: 'label'
+              %label.label セキュリティコード
               %span 必須
             .CardBox--ele
-              = f.text_field :payment_card_cvc, type: 'text', class: 'input-text', id: "payment_card_cvc", maxlength: "4", placeholder: 'カード背面4桁もしくは3桁の番号'
+              = text_field_tag  "payment_card_cvc", "", type: 'text', class: 'input-text', id: "payment_card_cvc", maxlength: "4", placeholder: 'カード背面4桁もしくは3桁の番号'
           .BodyCard__inner--btn
-            = f.submit '追加する', class: 'Button', id: 'token_submit'
+            = submit_tag '追加する', class: 'Button', id: 'token_submit'
 
