--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,50 +1,60 @@
-%h2 ユーザー登録情報
-= form_for(@user, url: user_registration_path) do |f|
-  = render "devise/shared/error_messages", resource: @user
-  .field
-    = f.label :nickname
-    %br/
-    = f.text_field :nickname
-  .field
-    = f.label :family_name
-    %br/
-    = f.text_field :family_name
-  .field
-    = f.label :first_name
-    %br/
-    = f.text_field :first_name
-  .field
-    = f.label :family_name_kana
-    %br/
-    = f.text_field :family_name_kana
-  .field
-    = f.label :first_name_kana
-    %br/
-    = f.text_field :first_name_kana
-  .field
-    = f.label :birthday
-    %br/
-    = f.date_select :birthday,                        |
-                    prompt:"--",                      |
-                    use_month_numbers: true,          |
-                    start_year: (Time.now.year),      |
-                    end_year:   1900,                 |
-                    date_separator: '/'
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true, autocomplete: "email"
-  .field
-    = f.label :password
-    - if @minimum_password_length
-      %em
-        (#{@minimum_password_length} characters minimum)
-    %br/
-    = f.password_field :password, autocomplete: "new-password"
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "new-password"
-  .actions
-    = f.submit "Next"
-= render "devise/shared/links"
+%section.RegistrationContainer
+
+  %h2.RegistrationHeader
+    会員情報入力
+
+  = form_for(@user, url: user_registration_path, html: {class: 'RegistrationForm'}) do |f|
+    = render "devise/shared/error_messages", resource: @user
+    .RegistrationForm__UserInput
+      .field.RegistrationForm__UserInput__Nickname
+        = f.label :ニックネーム, class: "label"
+        %span 必須
+        %br/
+        = f.text_field :nickname, placeholder: "例)フリマ太郎"
+      .field.RegistrationForm__UserInput__Email
+        = f.label :メールアドレス, class: "label" 
+        %span 必須
+        %br/
+        = f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "PC・携帯どちらでも可"
+      .field.RegistrationForm__UserInput__Pass
+        = f.label :パスワード, class: "label"
+        %span 必須
+        - if @minimum_password_length
+        %br/
+        = f.password_field :password, autocomplete: "new-password", placeholder: "7文字以上の半角英数字"
+      .field.RegistrationForm__UserInput__PassConf
+        = f.label :パスワード確認, class: "label"
+        %span 必須
+        %br/
+        = f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "パスワードと同じものを入力"
+    
+      %ul 本人確認
+
+      .field.RegistrationForm__UserInput__FullName
+        = f.label :お名前（全角）, class: "label"
+        %span 必須
+        %br/
+        .RegistrationForm__UserInput__FullName__InputBox
+          = f.text_field :family_name, placeholder: "例)田中"
+          = f.text_field :first_name, placeholder: "例)花子"
+      .field.RegistrationForm__UserInput__NameKana
+        = f.label :お名前かな（全角）, class: "label"
+        %span 必須
+        %br/
+        .RegistrationForm__UserInput__NameKana__InputBox
+          = f.text_field :family_name_kana, placeholder: "例)たなか"
+          = f.text_field :first_name_kana, placeholder: "例)はなこ"
+      .field.RegistrationForm__UserInput__Birthday
+        = f.label :生年月日, class: "label"
+        %span 必須
+        %br/
+        = f.date_select :birthday,                        |
+                        prompt: "--",                     |
+                        use_month_numbers: true,          |
+                        start_year: (Time.now.year),      |
+                        end_year:   1900,                 |
+                        date_separator: '/ '
+      %p ※本人情報は正しく入力してください。
+    = render "devise/shared/links"
+      .actions
+        = f.submit "次へ進む", class: "next-btn"
