--- a/app/views/devise/registrations/new_send_destination.html.haml
+++ b/app/views/devise/registrations/new_send_destination.html.haml
@@ -1,49 +1,55 @@
-%h2 住所情報登録
+%section.AdressRegistrationContainer 
 
-= form_for(@send_destination) do |f|
-  = render "devise/shared/error_messages", resource: @send_destination
+  %h2.AdressRegistrationHeader
+    住所情報入力
 
-  .field
-    = f.label :family_name
-    %br/
-    = f.text_field :family_name
-  .field
-    = f.label :first_name
-    %br/
-    = f.text_field :first_name
-  .field
-    = f.label :family_name_kana
-    %br/
-    = f.text_field :family_name_kana
-  .field
-    = f.label :first_name_kana
-    %br/
-    = f.text_field :first_name_kana
+  = form_for(@send_destination, html: {class: 'AdressRegistrationForm'}) do |f|
+    = render "devise/shared/error_messages", resource: @send_destination
+    .AdressRegistrationForm__SendDestInput
+      .basic-field.AdressRegistrationForm__SendDestInput__FullName
+        = f.label :お名前（全角）, class: "label"
+        %span 必須
+        %br/
+        .AdressRegistrationForm__SendDestInput__FullName__InputBox
+          = f.text_field :family_name, placeholder: "例)田中"
+          = f.text_field :first_name, placeholder: "例)花子"
+      .basic-field.AdressRegistrationForm__SendDestInput__NameKana
+        = f.label :お名前かな（全角）, class: "label"
+        %span 必須
+        %br/
+        .AdressRegistrationForm__SendDestInput__NameKana__InputBox
+          = f.text_field :family_name_kana, placeholder: "例)たなか"
+          = f.text_field :first_name_kana, placeholder: "例)はなこ"
 
-  .field
-    = f.label :postal_code
-    %br/
-    = f.text_field :postal_code
-  .field
-    = f.label :prefectures
-    %br/
-    = f.text_field :prefectures
-  .field
-    = f.label :municipalities
-    %br/
-    = f.text_field :municipalities
-  .field
-    = f.label :address
-    %br/
-    = f.text_field :address
-  .field
-    = f.label :building
-    %br/
-    = f.text_field :building
-  .field
-    = f.label :phone_number
-    %br/
-    = f.text_field :phone_number
-  .actions
-    = f.submit "Sign up"
-= render "devise/shared/links"
+      .basic-field.AdressRegistrationForm__SendDestInput__PostalCode
+        = f.label :郵便番号, class: "label"
+        %span 必須
+        %br/
+        = f.text_field :postal_code, placeholder: "※ハイフンなし 半角数字", class: "temp-input-form"
+      .basic-field.AdressRegistrationForm__SendDestInput__Prefectures
+        = f.label :都道府県, class: "label"
+        %span 必須
+        %br/
+        = f.text_field :prefectures, placeholder: "例)東京都", class: "temp-input-form"
+      .basic-field.AdressRegistrationForm__SendDestInput__Municipalities
+        = f.label :市区町村, class: "label"
+        %span 必須
+        %br/
+        = f.text_field :municipalities, placeholder: "例)〇〇区 〇〇町", class: "temp-input-form"
+      .basic-field.AdressRegistrationForm__SendDestInput__Adress
+        = f.label :番地, class: "label"
+        %span 必須
+        %br/
+        = f.text_field :address, placeholder: "例)1-15", class: "temp-input-form"
+      .basic-field.AdressRegistrationForm__SendDestInput__Building
+        = f.label :建物名, class: "label"
+        %br/
+        = f.text_field :building, placeholder: "例)〇〇ビル 702号室", class: "temp-input-form"
+      .basic-field.AdressRegistrationForm__SendDestInput__PhoneNum
+        = f.label :電話番号, class: "label"
+        %span 必須
+        %br/
+        = f.text_field :phone_number, placeholder: "※ハイフンなし 半角数字", class: "temp-input-form"
+      .actions
+        = f.submit "登録", class: "send-btn"
+  = render "devise/shared/links"
