ふりがな修正

--- a/app/views/devise/registrations/new_send_destination.html.haml
+++ b/app/views/devise/registrations/new_send_destination.html.haml
@@ -14,7 +14,7 @@
           = f.text_field :family_name, placeholder: "例)田中"
           = f.text_field :first_name, placeholder: "例)花子"
       .basic-field.AdressRegistrationForm__SendDestInput__NameKana
-        = f.label :お名前かな（全角）, class: "label"
+        = f.label :ふりがな（全角）, class: "label"
         %span 必須
         %br/
         .AdressRegistrationForm__SendDestInput__NameKana__InputBox
