--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -38,7 +38,7 @@
           = f.text_field :family_name, placeholder: "例)田中"
           = f.text_field :first_name, placeholder: "例)花子"
       .basic-field.RegistrationForm__UserInput__NameKana
-        = f.label :お名前かな（全角）, class: "label"
+        = f.label :ふりがな（全角）, class: "label"
         %span 必須
         %br/
         .RegistrationForm__UserInput__NameKana__InputBox
