--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -8,59 +8,59 @@
         .main__showMain__contents__topContent__itemBox
 
           %h2.main__showMain__contents__topContent__itemBox__name 
-            ジャージャー麺
+            = @product.name
 
           .main__showMain__contents__topContent__itemBox__image
-            %ul
-              %li.mainImage
-                = image_tag ('showimage/IMG_9072.jpg'), class: "img", id: "main-img"
-                %ul.imgList
-                  %li.lists
-                    = image_tag ('showimage/IMG_9072.jpg'), class: "imgs"
-                  %li.lists
-                    = image_tag ('showimage/IMG_9069.jpg'), class: "imgs"
-
+            .imageBox
+              .mainImage
+                = image_tag @product.images[0].image_url, class: "img", id: "main-img"
+                .imgList
+                  .lists
+                    - @product.images.each do |image|
+                      = image_tag image.image_url, class: "imgs"
           .main__showMain__contents__topContent__itemBox__price
-            %span ¥1000
+            %span 
+              ¥
+              = @product.price
             .main__showMain__contents__topContent__itemBox__price__tax
               (税込) 送料込み
 
           .main__showMain__contents__topContent__itemBox__explanation
-            おいしいおいしいジャージャー麺です！
+            = @product.introduce
           .main__showMain__contents__topContent__itemBox__table
             %table.showInfo
               %tbody
                 %tr
                   %th 出品者
-                  %td 陳 建一
+                  %td 
+                    = @product.user.nickname
                 %tr
                   %th カテゴリー
                   %td 
-                    = link_to "食べ物", "#", class: "showLink"
-                    %br/
-                    = link_to "中華料理", "#", class: "showLink"
-                    %br/
-                    = link_to "麺類", "#", class: "showLink"
-                    %br/
+                    = @product.kind.name
                 %tr
                   %th ブランド
-                  %td 四川飯店
+                  %td 
+                    = @product.brand.name
                 %tr
                   %th 商品のサイズ
-                  %td 並盛り
+                  %td 
                 %tr
                   %th 商品の状態
-                  %td 出来立て
+                  %td 
+                    = @product.condition.name
                 %tr
                   %th 配送料の負担
-                  %td 送料込み（出品者負担）
+                  %td 
+                    = @product.postage.name
                 %tr
                   %th 発送元の地域
                   %td 
-                    = link_to "北海道", "#", class: "showLink"
+                    = @product.prefecture.name
                 %tr
                   %th 発送日の目安
-                  %td 1-2日で発送
+                  %td 
+                    = @product.shipment.name
 
           .main__showMain__contents__topContent__itemBox__choiceArea
             .report
@@ -71,6 +71,23 @@
               .reportBtn
                 = icon('fa', 'flag flagIcon')
                 = link_to "不適切な商品の通報", "#", class: "flagBtn"
+
+
+          .main__showMain__contents__topContent__itemBox__buttonBox
+            - if user_signed_in? && current_user.id == @product.user_id
+              .editBtn
+                = link_to edit_product_path(@product.id), class: 'edit-Btn' do
+                  編集する
+              .editBtn
+                = link_to "削除する", "#", class: 'deleteBtn'
+            - else
+              - if @product.sold_out_flg == false
+                .editBtn
+                  = link_to "購入画面に進む", "#", class: 'buyBtn'
+              - else
+                .editBtn
+                  %h2.soldOut 売り切れました
+
 
         .main__showMain__contents__topContent__commentArea
           %form.commentForm
@@ -93,49 +110,24 @@
             = icon('fa', 'angle-right next')
 
       .main__showMain__contents__moreItems
-        = link_to "食べ物をもっと見る", "#", class: "more"
+        = link_to "もっと見る", "#", class: "more"
+        
         .productField
-          .productField__ProductBox
-            .productField__ProductBox__Image
-              = image_tag ('showimage/a007.png'), class: "relationImg"
-            .productField__ProductBox__Info
-              .prductField__ProductBox__Info__Name
-                サバの味噌煮
-              .productField__ProductBox__Info__Ele
-                .prductField__ProductBox__Info__Ele__Price
-                  10000円
-                .productField__ProductBox__Info__Ele__Favorite
-                  = icon('fa','star likeIcon')
-                  0
-              .productField__ProductBox__Info__Tax
-                (税込)
+          - @products_kind.each do |kind|
+            .productField__ProductBox
+              = link_to product_path(kind.id), class: "productLink" do
+                .productField__ProductBox__Image
+                  = image_tag kind.images[0].image_url, class: "relationImg"
+                  .productField__ProductBox__Info
+                    .prductField__ProductBox__Info__Name
+                      = kind.name
+                    .productField__ProductBox__Info__Ele
+                      .prductField__ProductBox__Info__Ele__Price
+                        ¥
+                        = kind.price
+                      .productField__ProductBox__Info__Ele__Favorite
+                        = icon('fa','star likeIcon')
+                        0
+                    .productField__ProductBox__Info__Tax
+                      (税込)
 
-          .productField__ProductBox
-            .productField__ProductBox__Image
-              = image_tag ('showimage/a001.png'), class: "relationImg"
-            .productField__ProductBox__Info
-              .prductField__ProductBox__Info__Name
-                カレーライス
-              .productField__ProductBox__Info__Ele
-                .prductField__ProductBox__Info__Ele__Price
-                  40000円
-                .productField__ProductBox__Info__Ele__Favorite
-                  = icon('fa','star likeIcon')
-                  0
-              .productField__ProductBox__Info__Tax
-                (税込)
-
-          .productField__ProductBox
-            .productField__ProductBox__Image
-              = image_tag ('showimage/a006.png'), class: "relationImg"
-            .productField__ProductBox__Info
-              .prductField__ProductBox__Info__Name
-                たらこスパゲティ
-              .productField__ProductBox__Info__Ele
-                .prductField__ProductBox__Info__Ele__Price
-                  20000円
-                .productField__ProductBox__Info__Ele__Favorite
-                  = icon('fa','star likeIcon')
-                  100
-              .productField__ProductBox__Info__Tax
-                (税込)
