--- a/app/assets/stylesheets/modules/forgot_pass.scss
+++ b/app/assets/stylesheets/modules/forgot_pass.scss
@@ -15,6 +15,10 @@
   .ForgotPassForm {
     background-color : white;
     border-top       : solid 1px silver;
+    #error_explanation {
+      text-align: left;
+      color: red;
+    }
     &__PassInput {
       margin     : 0 auto;
       max-width  : 343px;
