--- a/app/assets/stylesheets/modules/body_application.scss
+++ b/app/assets/stylesheets/modules/body_application.scss
@@ -7,7 +7,11 @@
 .no-underline {
   text-decoration: none;
 }
-
+.MarginBox{
+  height: 70px;
+  width: 100%;
+  background-color: rgb(238, 235, 235);
+}
 .btn-small{
   padding: 3px 5px;
   text-decoration: none;
