--- a/app/assets/stylesheets/modules/listing.scss
+++ b/app/assets/stylesheets/modules/listing.scss
@@ -41,7 +41,7 @@
         border-bottom: 1px solid #bfc2c2;
       }
       td{
-        padding: 10px 20px;
+        padding: 20px 20px;
         border-bottom: 1px solid #bfc2c2;
         .Edit-btn{
           margin-bottom: 20px;
@@ -52,4 +52,7 @@
 }
 .product_image{
   width: 100px;
+  height: 100px;
+  border: 1px solid #bfc2c2;
+  
 }
