--- a/app/assets/stylesheets/modules/show.scss
+++ b/app/assets/stylesheets/modules/show.scss
@@ -29,7 +29,7 @@ body{
                 width: 560px;
                 margin: 0 auto;
                 .img{
-                  border: 2px solid;
+                  border: 1px solid rgb(194, 192, 192);
                   object-fit: fill;
                   height: 346px;
                 }
@@ -44,7 +44,7 @@ body{
                     margin: 0 10px 0 0;
                     .imgs{
                       margin-left: 3px;
-                      border: 1px solid;
+                      border: 1px solid rgb(194, 192, 192);
                       object-fit: cover;
                       height: 87px;
                     }
