--- a/app/views/mypage/listings/_product.haml
+++ b/app/views/mypage/listings/_product.haml
@@ -8,12 +8,12 @@
   %td
     - if product.sold_out_flg
       .Edit-btn
-        = link_to "配送完了", "#", class: 'btn-small'
+        = link_to "配送手続完了", "#", class: 'btn_edit-small'
     - else
       .Edit-btn
-        = link_to edit_product_path(product.id), class: 'btn-small' do
+        = link_to edit_product_path(product.id), class: 'btn_edit-small' do
           編集する
       .Edit-btn
-        = link_to "削除する", "#", class: 'btn-small'
+        = link_to "削除する", "#", class: 'btn_delete-small'
 
 
