支払い金額/haml, scss

--- a/app/assets/stylesheets/modules/purchase.scss
+++ b/app/assets/stylesheets/modules/purchase.scss
@@ -28,6 +28,13 @@
           right: 0;
         }
       }
+      &--PayTitle{
+        font-size: 24px;
+      }
+      &--PayPrice{
+        font-size: 28px;
+
+      }
     }
   }
 }
